# image_hosting

./: Cargo.toml  Dockerfile
.github/workflows/: rust-release.yml
public/: index.html
src/: main.rs
